style.css
/*
RESPONSIVE */

/* - - - - RESETS - - - - */
body, body * {
  margin: 0;
  padding: 0;
}
a img {
  border: none;
}
a {
  text-decoration: none;
}
ul, ol {
  list-style-type: none;
}

/* - - - - GRID - - - - */
*,
*:after,
*:before {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
img {
    width: auto;
    max-width: 100%;
    height: auto !important;
}
.wrapper {
    max-width: 940px;
    width: 100%;
    padding: 0 1em;
    margin: 0 auto;
}
.wrapper:after,
.row:after {
    content: "";
    display: table;
    clear: both;
}
[class*='column-'] {
    float: left;
    padding: 1em;
    width: 100%;
    min-height: 1px;
}
.no-pad-left {
  padding-left: 0;
}
.no-pad-right {
  padding-right: 0;
}

/* - - - - GLOBAL - - - - */
body {
  font-family: 'Helvetica', 'Arial', 'sans-serif';
}
header {
  background: #434343;
  width: 100%;
  margin: 0 auto;
  position: fixed;
  -webkit-box-shadow: 0px 4px 14px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 0px 4px 14px 0px rgba(0,0,0,0.75);
  box-shadow: 0px 3px 17px 0px rgba(0,0,0,0.75);
  z-index:10;
}
h1 {
  font-size: 2em;
  padding-top: 1em;
}
p {
  font-size: 1em;
  padding: 1em 0;
  line-height: 1.25;
}
.yellow {
  background-color:#ffff00;
}
.blue {
  background-color:#07b0ed;
}
.red {
  background-color:#ff6963;
}

/* - - - - HEADER - - - - */
.header-wrapper {
  max-width: 960px;
  padding: 0 20px;
  margin: 0 auto;
  position:relative;
}
img.logo {
  width: 100%;
  height: auto;
}
.header-left {
  float: left;
  width: 70%;
  padding: 0 1em 0 0;
}
.header-right {
  float: right;
  padding:0;
}
.header-menu {
  display: none;
}
.share-buttons {
  display: none;
}
.header-nav {
  clear:both;
}
.hidden {
  display:none;
}
.header-nav ul li {
  float: none;
  padding: 15px;
  border-top: 1px solid #999;
  margin: 0;
}
.header-nav li:last-child {
  border-bottom: 1px solid #999;
}
.header-nav ul li a {
  display: block;
  color: #fff;
}
.header-nav ul li a:hover{
  text-decoration:underline;
  color:#07b0ed;
}
.responsive-menu-wrapper {
  float:right;
  width:14.893617%;
  padding-top:20px;
}

.menu ul li {
  font-size:2em;
  text-align:center;
}
.menu ul li:last-child {
  margin-bottom:10px;

}
/* - - - - CONTENT - - - -  */
.content {
  width: 100%;
  margin: 0 auto;
  z-index:1;
}
.content-section {
  padding: 0;
}
.border-top {
  display: none;
}
.main-content-slider {
  height: 150px;
  border: 1px solid black;
  margin-top: 1em;
}
.current-projects .section-left {
  width: 50%;
  padding-right: 1em;
}
.current-projects .section-right {
  width: 50%;
  padding-left: 1em;
}
/*.mission-statement {
  padding: 0;
}*/
.current-projects img {
  width: 100%;
  height: auto;
  margin: 5px 0 20px 0;
}
a.button-small {
  display: block;
  clear: both;
  width: 150px;
  height: 40px;
  background: #E0E0E0;
  text-align: center;
  line-height: 40px;
}
/* - - -  PAGE CONTENT - - - - */

.single-share li{
  display: inline-block;
  text-align: center;
  border:1px solid #CC9;
  border-radius: 2px;
  list-style-type: none;
  padding: 3px 10px;
  margin: 15px 10px 10px 0;
  text-decoration: none;
}
/*.post-comment {
  width: 100%;
  height: auto;
  float: left;
}*/
.comment-image {
  border:1px solid #CC9;
  border-radius: 50%;
  text-align:center;
  float:left;
  width:120px;
  height:120px;
  margin: 15px 20px 15px 0;
}
.pad-bottom{
  padding-bottom: 1em;
}
.border-bottom {
  padding-top:20px;
  border-bottom:solid 1px;
}
.button {
  display: inline-block;
  text-align: center;
  border:1px solid #CC9;
  border-radius: 4px;
  list-style-type: none;
  padding: 3px;
  width: 100px;
  margin: 15px 10px 10px 0;
  text-decoration: none;
}
.partner-logo {
  width: 25%;
  height:80px;
  background-color:#999;
  line-height:80px;
  text-align:center;
  padding: 0;
  margin-top: 1em;
}
.partner-description {
  float: left;
  width: 75%;
  padding-left: 2em;
}
.gallery-content .row .image-row-container .image-container {
  width: 50%;
}
.content-headline {
  height: 75px;
  line-height: 75px;
  color:#fff;
  background-color:#333;
  padding-left: 20px;
}
/* - - - - WIDGETS - - - - */

.sidebar {
  display: none;
}

/* - - - - FOOTER - - - - */
footer {
  background: #E0E0E0;
  width: 100%;
}
.footer-wrapper {
  max-width: 960px;
  padding: 1em;
  margin: 0 auto;
}
.footer-left {
  padding: 0;
}
.footer-left .social-icons {
  display: none;
}
.footer-right {
  display: none;
}
.social-icons li {
  display: inline-block;
  text-align: center;
  width: 25%;
}
.social-mobile .social-icons li a img {
  max-width: 65px;
  height: auto;
}
.social-icons li a {
  display: block;
}
.share-button-list .column-4 {
  width: 33.3333%;
}
.center {
  padding-left: .5em;
  padding-right: .5em;
}
.button-footer a {
  display: block;
  height: 40px;
  line-height: 40px;
  text-align: center;
  background: #FFF;
}
.clearfix {
  clear: both;
}

@media screen and (min-width: 748px) {

/* - - - - GRID - - - - */
.wrapper {
    width: 96%;
    max-width: 940px;
    padding: 0;
}
.column-1 {
    width: 8.33333%;
}
.column-2 {
    width: 16.66667%;
}
.column-3 {
    width: 25%;
}
.column-4 {
    width: 33.33333%;
}
.column-5 {
    width: 41.66667%;
}
.column-6 {
    width: 50%;
}
.column-7 {
    width: 58.33333%;
}
.column-8 {
    width: 66.66667%;
}
.column-9 {
    width: 75%;
}
.column-10 {
    width: 83.33333%;
}
.column-11 {
    width: 91.66667%;
}
.column-12 {
    width: 100%;
}

/* - - - - HEADER TABLET - - - - */
.header-right {
  padding-top: 0;
  padding-bottom:0;
}
.responsive-menu-wrapper {
  display: none;
}
.share-buttons {
  display: block;
  padding: 0 0 0 .8em;
  border-radius: 0px 0px 10px 10px;
}
.share-buttons ul li{
  padding: 0;
  margin: 0 .5em 0 .5em;
  font-family:Arial, Helvetica, sans-serif;
  font-size: 32px;
  color:#000;
  -moz-border-radius: 0px 0px 10px 10px;
  -webkit-border-radius: 0px 0px 10px 10px;
  border: 0px solid #000000;
  -webkit-box-shadow: 10px 10px 17px -2px rgba(0,0,0,0.75);
  -moz-box-shadow: 10px 10px 17px -2px rgba(0,0,0,0.75);
  box-shadow: 10px 10px 17px -2px rgba(0,0,0,0.75);
}
.share-buttons ul li a {
  display: block;
  height: 50px;
  line-height: 40px;
  text-align: center;
  color:#000;
}
.header-nav {
  display: block;

}
.header-nav ul {
  display: table;
  width: 100%;
}
.header-nav ul li {
  display: table-cell;
  border-top: none;
}
.header-left {
}
.header-nav li:last-child {
border-bottom: none;
}
.menu ul li {
  font-size:1.25em;
}
/* - - - - CONTENT TABLET - - - - */
/*.mission-statement {
  padding-right: 1em;
}*/
.current-projects {
  padding-left: 1em;
}
.section-left {
  padding-right: 1em;
}
.section-right {
  padding-left: 1em;
}
.border-top {
  display: block;
  border-top: 1px solid #CCC;
}
.blog-section {
  position: relative;
}
.blog-section h2 {
  margin-bottom: 5px;
}
.blog-section img {
  height: auto;
  float: left;
  padding-left: 0;
}
.blog-section .button-large {
  display: block;
  position: absolute;
  bottom: 1em;
  right: 1em;
  width: 150px;
  height: 40px;
  text-align: center;
  line-height: 40px;
  background: #E0E0E0;
}
.blog-post .button-small {
  float: left;
}
.sidebar {
  padding-right: 0;
}
.social-mobile {
  display: none;
}

/* - - - - PAGE CONTENT - - - - */

.single-share li{
  display: inline-block;
  text-align: center;
  border:1px solid #CC9;
  border-radius: 2px;
  list-style-type: none;
  padding: 3px 10px;
  margin: 15px 10px 10px 0;
  text-decoration: none;
}
.partner-description {
  padding-left: 2em;
  padding-top: 0;
}
.gallery-content .row {
  margin-left: -1em;
}
.gallery-content p {
  padding-right: 1em;
}
.gallery-content .row img {
  width: 100%;
}
.gallery-content .row .image-row-container {
  width: 50%;
  float:left;
}
/*.post-comment {
  width: 57.142857%}
  */
/* - - - - WIDGETS - - - - */
.sidebar {
  display: block;
  float: right;
}
/* - - - - FOOTER TABLET - - - - */
.footer-wrapper {
  width: 96%;
  max-width: 960px;
  padding: 30px 0 20px 0;
}
.footer-right {
  display: block;
  padding: 0 1em;
}
.footer-nav {
  padding-top: .5em;
}
.footer-nav ul {
  width: 100%;
  display: table;
}
.footer-nav li {
  display: table-cell;
  font-size: .875em;
  text-align: center;
}
.footer-nav ul li a {
  display: block;
}
.footer-left .share-button-list {
  display: none;
}
.footer-left .social-icons {
  display: block;
}
.footer-left .social-icons li {
  padding: .5em;
}
.copy {
  font-size: .875em;
  padding-top: 1.5em;
  text-align: right;
  margin-right: .5em;
}

}

@media screen and (min-width: 1056px) {

}

